gcc/testsuite/g++.dg/cpp/pr83602.C
// PR preprocessor/83602
// { dg-do compile }

_Pragma	// { dg-error "_Pragma" }
